examples/should_fail/match_rettype_mismatch.nml
let f n =
  match n with
    | Succ n -> n
    | 0 -> false
in

f 3
